--- a/BackEnd/.env
+++ b/BackEnd/.env
@@ -32,10 +32,9 @@ MAIL_MAILER=smtp
 MAIL_HOST=sandbox.smtp.mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=da4cad549fdbab
-MAIL_PASSWORD=********85aa
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_PASSWORD=9aae054ace85aa
+# MAIL_FROM_ADDRESS="hilal.bodon@hgmail.com"
+# MAIL_FROM_NAME="${APP_NAME}"
 
 
 AWS_ACCESS_KEY_ID=
