--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "axios": "^1.4.0",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
+    "react-google-charts": "^4.0.1",
     "react-router-dom": "^6.15.0",
     "theme-ui": "^0.16.0"
   },
