--- a/BackEnd/composer.json
+++ b/BackEnd/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "nesbot/carbon": "^2.68",
         "php-open-source-saver/jwt-auth": "^2.1",
         "spatie/laravel-backup": "^8.3"
     },
