addink backup functionality with button

--- a/BackEnd/.env
+++ b/BackEnd/.env
@@ -33,8 +33,8 @@ MAIL_HOST=sandbox.smtp.mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=da4cad549fdbab
 MAIL_PASSWORD=9aae054ace85aa
-# MAIL_FROM_ADDRESS="hilal.bodon@hgmail.com"
-# MAIL_FROM_NAME="${APP_NAME}"
+MAIL_FROM_ADDRESS="hilal.bodon@hgmail.com"
+MAIL_FROM_NAME="${APP_NAME}"
 
 
 
